--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -22,6 +22,7 @@ body {
     font-family: 'Luckiest Guy', cursive;
 }
 
+
 pre {
     color:grey;
     background:white;
@@ -29,10 +30,44 @@ pre {
     padding: 15px;
     overflow:auto;
 }
+.report em {
+    color:orange;
+}
+.report blockquote {
+    /*border-left: 0.25em solid #dfe2e5;
+ color: #6a737d;
+ padding: 0 1em;*/
+ font-family: Georgia, serif;
+font-style: italic;
+width: 500px;
+margin: 0.25em 0;
+padding: 0.25em 40px;
+line-height: 1.45;
+position: relative;
+color: #383838;
+}
+blockquote:before {
+display: block;
+content: "\201C";
+font-size: 40px;
+position: absolute;
+left: -1px;
+top: -1px;
+color: #7a7a7a;
+}
 .report p {
     font-family: 'Open Sans', sans-serif;
 }
-
+.report li {
+    list-style-type: circle;
+}
+code {
+    background:white;
+    border-radius: 0.2em;
+    padding: 2px;
+    overflow:auto;
+    color:grey;
+}
 
 .report a {
     color: orange;
@@ -95,6 +130,23 @@ table, td, th {
 }
 
 /*Popup*/
+.comment {
+  border-radius: 1em;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.16), 0 1px 2px rgba(0, 0, 0, 0.23);
+  display: flex;
+  flex-direction: row;
+flex-wrap: wrap;
+  margin: 0 auto 10px;
+  position:relative;
+  min-height:10px;
+  padding: 10px;
+  background:white;
+
+  width: 85%;
+
+}
+
+/*Popup*/
 .popup {
   border-radius: 1em;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.16), 0 1px 2px rgba(0, 0, 0, 0.23);
@@ -110,8 +162,8 @@ table, td, th {
 
 }
 .popclose:hover {
-     background:white;
-     color:#07a5e7;
+     background:red;
+     color:white;
 }
 .popup:hover {
      animation:none;
@@ -159,22 +211,13 @@ table, td, th {
 }
 /*den ska ligga på sidan, då ska popup vibrera*/
 .popclose {
-    background-color: #07a5e7;
-      border: 2px solid #fff;
+    background-color: white;
+      border: 2px solid #009CE6;
       border-radius: 50%;
-      color: white;
-      position:absolute; right:-10px; top:-40px;
+      color: #009CE6;
+      position:absolute; right:-10px; top:-10px;
       padding: 1.5px 7px;
       cursor:pointer;
-
-    /*display: flex;
-    align-items: center;
-
-    cursor:pointer;
-    border-radius:2em;
-    border:1px solid white;
-    padding:5px;
-    margin-right:5%;*/
 
 }
 .popup p {
