--- a/htdocs/css/forms/login.css
+++ b/htdocs/css/forms/login.css
@@ -36,7 +36,6 @@
     margin:auto;
     text-align: center;
     color: white;
-    font-size: 3em;
     margin-top:24px;
     max-width:600px;
 }
@@ -80,7 +79,7 @@
     box-shadow: inset 0 -1px 5px 1px rgba(0,0,0,0.75);
 }
 
-.login-widget button {
+.login-widget input[type=submit] {
     cursor:pointer;
     border: 0 none;
     background: orange;
